<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/staff_navigation"
app:startDestination="@+id/toolsFragment">

    <fragment
        android:id="@+id/toolsFragment"
        android:name="nwmsu.android.conferenceapp.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="nwmsu.android.conferenceapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/staffMoreFragment"
        android:name="nwmsu.android.conferenceapp.ui.staffmenu.StaffMenuFragment"
        android:label="@string/title_staff_menu"
        tools:layout="@layout/fragment_staff_menu" />
</navigation>