<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sessions">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="nwmsu.android.conferenceapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="nwmsu.android.conferenceapp.ui.sessions.SessionsFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_sessions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="nwmsu.android.conferenceapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>